--- a/config
+++ b/config
@@ -3,10 +3,10 @@
 # Executors will use this to discover the change of an Orchestrator destination.
 # Note the Orchestrator needs this to match its URL, otherwise it will be inactive.
 # The trailing / on the url is required.
-orchestrator.url=https://jenkins-orchestrator:8443/
+orchestrator.url=https://jenkins-orchestrator.eng.sonicwall.com:8443/
 
 # Optional: Permit http to be used in url field (Default: false)
 #
 # Node sharing is using Basic HTTP authentication scheme so use of http effectively
 # discloses the password. Do not set to true unless you know what you are doing!
-enforce_https=true
+enforce_https=false
